WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310847
[JSC] IndexMap::resize should not overwrite existing elements
https://bugs.webkit.org/show_bug.cgi?id=310847
Summary
[JSC] IndexMap::resize should not overwrite existing elements
Dan Hecht
Reported
2026-03-26 16:41:40 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-26 16:41:47 PDT
<
rdar://problem/173451278
>
Dan Hecht
Comment 2
2026-03-26 16:47:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61453
EWS
Comment 3
2026-03-27 08:35:03 PDT
Committed
310076@main
(f8a1572e3a8e): <
https://commits.webkit.org/310076@main
> Reviewed commits have been landed. Closing PR #61453 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug