[JSC] IndexMap::resize should not overwrite existing elements https://bugs.webkit.org/show_bug.cgi?id=310847 rdar://173451278

Reviewed by Yusuke Suzuki.

IndexMap::resize was using Vector::fill, which overwrites all elements
including existing ones. This is surprising since resize usually
means to change the size but leave existing elements in place.

So make IndexMap::resize (and TmpMap::resize) follow the standard behavior.
An upcoming change will need this true resize behavior.

All current callers resize from empty, so this is a no-op for existing
code.

Also remove TmpMap::clear which called nonexistent IndexMap::remove and
had no callers, and simplify TmpMap::resize to match.

Covered by existing JSC stress tests
* Source/JavaScriptCore/b3/air/AirTmpMap.h:
(JSC::B3::Air::TmpMap::resize):
(JSC::B3::Air::TmpMap::clear): Deleted.
* Source/WTF/wtf/IndexMap.h:
(WTF::IndexMap::resize):

Canonical link: https://commits.webkit.org/310076@main