Source/JavaScriptCore/b3/air/AirTmpMap.h
@@ -50,20 +50,12 @@ public:
     {
     }
     
-    template<typename... Args>
-    void resize(Code& code, const Args&... args)
+    void resize(Code& code)
     {
-        m_gp.resize(Tmp::absoluteIndexEnd(code, GP), args...);
-        m_fp.resize(Tmp::absoluteIndexEnd(code, FP), args...);
+        m_gp.resize(Tmp::absoluteIndexEnd(code, GP));
+        m_fp.resize(Tmp::absoluteIndexEnd(code, FP));
     }
-    
-    template<typename... Args>
-    void clear(const Args&... args)
-    {
-        m_gp.remove(args...);
-        m_fp.remove(args...);
-    }
-    
+
     const Value& operator[](Tmp tmp) const
     {
         if (tmp.isGP())
