Source/WTF/wtf/IndexMap.h
@@ -58,10 +58,15 @@ public:
     {
     }
 
-    template<typename... Args>
-    void resize(size_t size, Args&&... args)
+    void resize(size_t size)
     {
-        m_vector.fill(Value(std::forward<Args>(args)...), size);
+        size_t oldSize = m_vector.size();
+        m_vector.resize(size);
+        // Vector::resize doesn't initialize new elements for trivial types.
+        if constexpr (std::is_trivial_v<Value>) {
+            if (size > oldSize)
+                std::fill(m_vector.begin() + oldSize, m_vector.end(), Value());
+        }
     }
 
     template<typename... Args>
